# public/swagger/swagger.yaml
@@ -9,6 +9,28 @@ tags:
     description: Manage Sample
 
 paths:
+  /v1/enum/{name}:
+    get:
+      tags:
+        - Enum
+      summary: Get Values By Name
+      description: 'Enums available: "CustodyType", "SampleType", "Status", "StorageType" and "UnitMeasurement"'
+      operationId: enum
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: path
+          name: name
+          type: string
+          value: CustodyType
+          required: true
+      responses:
+        '200':
+          description: successful operation
+        '400':
+          description: Bad request
   /v1/sample:
     get:
       tags:
